--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,60 @@
+* {
+  font-family: 'Press Start 2P', cursive;
+  color: black;
+}
+
+
 body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: bolder;
-  font-size: 30px;
-  color: #fff;
-  text-align: center;
   overflow-y: hidden;
-  max-width: 100vw;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
 }
 
+
+#container {
+  display: block;
+  position: relative;
+  text-align: center;
+}
+
+
+#start-screen {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+
+
+#game-logo {
+  width: 425px;
+  height: 187px;
+  padding-top: 175px;
+}
+
+
 #canvas-container {
-  padding: 50px 0px;
+  width: 100%;
+  height: 100%;
+  padding: 70px 0px;
+}
+
+
+#slogan {
+  font-size: 17px;
+  padding: 70px;
+  line-height: 30px;
+}
+
+
+#start-button {
+  width: 120px;
+  height: 60px;
+  color: white;
+  background-color: #ccb3ff;
+  text-align: center;
+  line-height: 25px;
+  font-size: 17px;
 }
