--- a/styles/style.css
+++ b/styles/style.css
@@ -66,19 +66,7 @@ body {
   
   }
 
-
-
-/* #start-button {
-  width: 120px;
-  height: 60px;
-  color: white;
-  background-color: #ccb3ff;
-  text-align: center;
-  line-height: 25px;
-  font-size: 17px;
-} */
-
-#instructions-container{
+.instructions-container{
 display: flex;
 justify-content: center;
 
@@ -96,5 +84,4 @@ justify-content: center;
   text-align: left;
   line-height: 30px;
 }
-
 
